--- a/week13/myfront13/myflask/static/mystyle.css
+++ b/week13/myfront13/myflask/static/mystyle.css
@@ -1,9 +1,10 @@
 html {
     height: 100%;
-    background-color: aquamarine;
+    background-color: lightgreen;
 }
 
 h1 {
-    color: blue;
+    padding-bottom: 10px;
+    color: darkblue;
     border-bottom: 1px solid gray;
 }
