--- a/week13/myfront13/myflask/templates/index.html
+++ b/week13/myfront13/myflask/templates/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<title>My Paste Bin - Main</title>
-
-<link rel="stylesheet" href="{{ url_for('mybp.static', filename='mystyle.css') }}">
-
-<body>
-
-<h1>Pastes ( {{ count_pastes }} pastes from {{ count_users }} users )</h1>
-
-<div id='pastes'>
-</div>
-
-
-</body>
-
-<script src="{{ url_for('mybp.static', filename='myscript.js') }}"></script>
-
+    <head>
+    <title>My Paste Bin - Main</title>
+    <link rel="stylesheet" href="{{ url_for('mybp.static', filename='mystyle.css') }}">
+    </head>
+    <body>
+        <h1>Pastes ( {{ count_pastes }} pastes from {{ count_users }} users )</h1>
+        <div id='pastes'>
+        </div>
+    </body>
+    <script src="{{ url_for('mybp.static', filename='myscript.js') }}"></script>
 </html>
