--- a/week13/myfront13/myflask/static/mystyle.css
+++ b/week13/myfront13/myflask/static/mystyle.css
@@ -12,16 +12,18 @@ h1 {
 form {
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    padding: 10px;
     width: 100%;
     border: 3px solid white;
 }
 
 input {
+    margin: 10px 0;
     padding: 10px 20px;
 }
 
-.submit {
+button {
+    margin-top: 10px;
     width: 100%;
     color: white;
     background-color: green;
